--- a/TwoOkNotes/Views/MainWindow.xaml
+++ b/TwoOkNotes/Views/MainWindow.xaml
@@ -54,16 +54,18 @@
             </StackPanel>
 
             <Grid Grid.Column="1" Margin="10,10,10,10" Grid.Row="1">
-                <Button
-                    Command="{Binding LoadCurrentFileCommand}" Width="133" Height =" 153">
-                    <Button.Content>
-                        <Image Source="{Binding ImagePath}"
-                       Width="133"
-                       Height="153"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-                    </Button.Content>
-                </Button>
+                <ListView ItemsSource="{Binding SavedPages}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock Text="{Binding Name}" FontSize="16" Margin="0,0,10,0" />
+                                <Button Content="Open"
+                           Command="{Binding DataContext.LoadCurrentFileCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                           CommandParameter="{Binding}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
 
         </Grid>
