--- a/TwoOkNotes/Views/EditingWindow.xaml
+++ b/TwoOkNotes/Views/EditingWindow.xaml
@@ -68,8 +68,8 @@
                        Converter={StaticResource BooleanToVisibilityConverter}}"
                  HorizontalAlignment="Right" 
                VerticalAlignment="Top" 
-               Width="200" 
-               Height="250"/>
+               Width="272" 
+               Height="290" Margin="0,0,862,0"/>
         </Grid>
     </DockPanel>
  
