Added getting a specific filepath from the user

--- a/TwoOkNotes/Views/MainWindow.xaml
+++ b/TwoOkNotes/Views/MainWindow.xaml
@@ -43,8 +43,9 @@
                              Height="50"
                              Foreground="#ac3dac"
                              FontSize="14"
-                             Style="{StaticResource LauncherButtonTheme}"/>
-
+                             Style="{StaticResource LauncherButtonTheme}"
+                             Command="{Binding LoadAFile}"/>
+                
                 <RadioButton Content="New File"
                              Height="50"
                              Foreground="#ac3dac"
