--- a/TwoOkNotes/Views/EditingWindow.xaml
+++ b/TwoOkNotes/Views/EditingWindow.xaml
@@ -7,10 +7,10 @@
         xmlns:views="clr-namespace:TwoOkNotes.Views" 
         d:DataContext="{d:DesignInstance Type=local:EditingWIndowViewModel}"
         mc:Ignorable="d"
+        KeyDown="Window_KeyDown"
+        KeyUp="Window_KeyUp"
         Title="EditingWindow" Height="2560" Width="1440">
-    <!--<Window.Resources>
-        <local:PenViewModel x:Key="PenViewModel" />
-    </Window.Resources>-->
+
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
