- Added zoom functionality

--- a/TwoOkNotes/Views/EditingWindow.xaml
+++ b/TwoOkNotes/Views/EditingWindow.xaml
@@ -72,6 +72,16 @@
                 Content="Pen"
                 Command="{Binding TogglePenSettingsCommand}" 
                 Margin="1"/>
+            
+            <Button 
+                Content="Zoom In" 
+                Command="{Binding ZoomInCommand}"
+                Margin="1"/>
+
+            <Button 
+                Content="Zoom In" 
+                Command="{Binding ZoomOutCommand}"
+                Margin="1"/>
 
         </StackPanel>
         <Grid>
