--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
